--- a/form.html
+++ b/form.html
@@ -63,11 +63,11 @@
                   </div>
                   <div class="form-section__form-wrapper">
                       <form class="form-section__form" action="https://echo.htmlacademy.ru">
-                          <input class="form-section__input" type="name" placeholder="name" name="user_name"  required>
-                          <input class="form-section__email-input" type="email" placeholder="Email Address" name="user_email" required>
+                          <input class="form-section__input" type="name" placeholder="name" autocomplete="off" name="user_name"  required>
+                          <input class="form-section__email-input" type="email" placeholder="Email Address" autocomplete="off" name="user_email" required>
                           <p class="form-section__email-text">This field is required</p>
-                          <input class="form-section__input" type="name" placeholder="Company Name" name="company_name" required>
-                          <input class="form-section__input" type="name" placeholder="Title" name="title" required>
+                          <input class="form-section__input" type="name" placeholder="Company Name" autocomplete="off" name="company_name" required>
+                          <input class="form-section__input" type="name" placeholder="Title" autocomplete="off" name="title" required>
                           <textarea class="form-section__messenge" cols="30" rows="10" name="text" placeholder="Message"></textarea>
                           <button class="form-section__button" type="submit">submit</button>
                       </form>
